--- a/CSS/cataloguePokeball.css
+++ b/CSS/cataloguePokeball.css
@@ -119,3 +119,16 @@ body{
     }
 }
 /* Fin barras de navegación */
+
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+}
