--- a/CSS/createAccountStyle.css
+++ b/CSS/createAccountStyle.css
@@ -115,4 +115,13 @@ p{
     font-size: 12px;
     color: #4d4d4d;
 }
+.warning{
+    width: 1px;
+    text-align: center;
+    margin: auto;
+    color: red;
+    padding-top: 1px;
+    font-size: 10px;
+}
+
 
